// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`archive roundtrip should pack a directory into a volume 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Pack source: <sandbox>/source",
    "Pack destination: <sandbox>/packed",
    "Wrote <sandbox>/packed/testdata.db",
    "Packed 6 file(s) into 1 volume(s), took <duration>",
    "Summary: 6 compressed, 0 stored, 0 aliased, 0 skipped",
    "Size: 0.007 MB source, 0.003 MB written",
  ],
}
`;

exports[`archive roundtrip should report without writing in dry mode 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Unpack in dry mode",
    "Unpack source: <sandbox>/packed/testdata.db",
    "Unpack destination: <sandbox>/dry",
    "Summary: 1 archive(s), 6 file(s), 0.003 MB compressed, 0.007 MB real",
    "Unpacking files, parallel 32",
  ],
}
`;

exports[`archive roundtrip should unpack the volume 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Unpack source: <sandbox>/packed/testdata.db",
    "Unpack destination: <sandbox>/unpacked",
    "Summary: 1 archive(s), 6 file(s), 0.003 MB compressed, 0.007 MB real",
    "Unpacking files, parallel 32",
    "Unpacked archive, took <duration> (preparation <duration>, unpack <duration>)",
  ],
}
`;

exports[`archive roundtrip should write the expected files 1`] = `
[
  {
    "path": "packed/testdata.db",
    "sha256": "a35f0699de04286cfeddd399949a5d56a5637a9134633bd7eb39274ed8cb6d82",
    "size": 3231,
  },
  {
    "path": "source/alife.ltx",
    "sha256": "160920506a492754ff5c45ceb7f4d169e19e002dff25be0cfe03b1cc671b91cd",
    "size": 781,
  },
  {
    "path": "source/defines.ltx",
    "sha256": "3901c71e698c9be76fd7502c7837f9ee3176c592edcb120156788f1ad1957b7d",
    "size": 3848,
  },
  {
    "path": "source/evaluation.ltx",
    "sha256": "13b3971565375db44d091d58246aaf728df84d55f61adcd232f1351b621e81cc",
    "size": 276,
  },
  {
    "path": "source/fonts.ltx",
    "sha256": "c68091a9f10ac4545cd0818f9e1a98194898f8fe3483e620328122353e50b93d",
    "size": 2021,
  },
  {
    "path": "source/game.ltx",
    "sha256": "c502a7d26aff39902fcd3631e65c37b732a8e85470aff4267cbb04f36a30184b",
    "size": 218,
  },
  {
    "path": "source/system.ltx",
    "sha256": "3eb8c8d53e9b0b288b99d19329a298311c34a398602cd203cd4284b4d23c8b12",
    "size": 249,
  },
  {
    "path": "unpacked/gamedata/alife.ltx",
    "sha256": "160920506a492754ff5c45ceb7f4d169e19e002dff25be0cfe03b1cc671b91cd",
    "size": 781,
  },
  {
    "path": "unpacked/gamedata/defines.ltx",
    "sha256": "3901c71e698c9be76fd7502c7837f9ee3176c592edcb120156788f1ad1957b7d",
    "size": 3848,
  },
  {
    "path": "unpacked/gamedata/evaluation.ltx",
    "sha256": "13b3971565375db44d091d58246aaf728df84d55f61adcd232f1351b621e81cc",
    "size": 276,
  },
  {
    "path": "unpacked/gamedata/fonts.ltx",
    "sha256": "c68091a9f10ac4545cd0818f9e1a98194898f8fe3483e620328122353e50b93d",
    "size": 2021,
  },
  {
    "path": "unpacked/gamedata/game.ltx",
    "sha256": "c502a7d26aff39902fcd3631e65c37b732a8e85470aff4267cbb04f36a30184b",
    "size": 218,
  },
  {
    "path": "unpacked/gamedata/system.ltx",
    "sha256": "3eb8c8d53e9b0b288b99d19329a298311c34a398602cd203cd4284b4d23c8b12",
    "size": 249,
  },
]
`;
